user functions added
