# docs/swagger.yaml
@@ -1,12 +1,30 @@
 basePath: /
 definitions:
-  todos.Todo:
+  ent.Todo:
     properties:
       description:
+        description: Description holds the value of the "description" field.
         type: string
       id:
+        description: ID of the ent.
         type: integer
       title:
+        description: Title holds the value of the "title" field.
+        type: string
+    type: object
+  ent.User:
+    properties:
+      id:
+        description: ID of the ent.
+        type: integer
+      password:
+        description: Password holds the value of the "password" field.
+        type: string
+      role:
+        description: Role holds the value of the "role" field.
+        type: string
+      username:
+        description: Username holds the value of the "username" field.
         type: string
     type: object
 host: localhost:8080
@@ -18,7 +36,7 @@ info:
 paths:
   /todos:
     get:
-      description: Bu endpoint tüm todo'ları listeler.
+      description: Bu endpoint, tüm todo'ları listeler.
       produces:
       - application/json
       responses:
@@ -26,7 +44,7 @@ paths:
           description: Todo'lar başarıyla listelendi
           schema:
             items:
-              $ref: '#/definitions/todos.Todo'
+              $ref: '#/definitions/ent.Todo'
             type: array
         "500":
           description: Todo'lar listelenemedi
@@ -45,7 +63,7 @@ paths:
         name: todo
         required: true
         schema:
-          $ref: '#/definitions/todos.Todo'
+          $ref: '#/definitions/ent.Todo'
       produces:
       - application/json
       responses:
@@ -80,6 +98,10 @@ paths:
           description: Todo başarıyla silindi
           schema:
             type: string
+        "400":
+          description: Geçersiz ID
+          schema:
+            type: string
         "500":
           description: Todo silinemedi
           schema:
@@ -101,7 +123,11 @@ paths:
         "200":
           description: Belirli todo başarıyla getirildi
           schema:
-            $ref: '#/definitions/todos.Todo'
+            $ref: '#/definitions/ent.Todo'
+        "400":
+          description: Geçersiz ID
+          schema:
+            type: string
         "404":
           description: Todo bulunamadı
           schema:
@@ -128,7 +154,7 @@ paths:
         name: todo
         required: true
         schema:
-          $ref: '#/definitions/todos.Todo'
+          $ref: '#/definitions/ent.Todo'
       produces:
       - application/json
       responses:
@@ -147,4 +173,95 @@ paths:
       summary: Update a Todo
       tags:
       - todos
+  /users:
+    get:
+      description: Bu endpoint, tüm user'ları listeler.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: user'lar başarıyla listelendi
+          schema:
+            items:
+              $ref: '#/definitions/ent.Todo'
+            type: array
+        "500":
+          description: user'lar listelenemedi
+          schema:
+            type: string
+      summary: Get all User
+      tags:
+      - User
+  /users/login:
+    post:
+      consumes:
+      - application/json
+      description: This endpoint logs in a user with their username and password.
+      parameters:
+      - description: User Login Data
+        in: body
+        name: loginUser
+        required: true
+        schema:
+          properties:
+            password:
+              type: string
+            username:
+              type: string
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Logged in successfully
+          schema:
+            $ref: '#/definitions/ent.User'
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Server error
+          schema:
+            type: string
+      summary: Log in a user
+      tags:
+      - User
+  /users/register:
+    post:
+      consumes:
+      - application/json
+      description: This endpoint registers a new user with a role.
+      parameters:
+      - description: User Registration Data
+        in: body
+        name: registerUser
+        required: true
+        schema:
+          properties:
+            password:
+              type: string
+            role:
+              type: string
+            username:
+              type: string
+          type: object
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: User registered successfully
+          schema:
+            type: string
+        "400":
+          description: Invalid request
+          schema:
+            type: string
+        "500":
+          description: Server error
+          schema:
+            type: string
+      summary: Register a new user
+      tags:
+      - User
 swagger: "2.0"
