# ent/schema/user.go
@@ -1,0 +1,18 @@
+package schema
+
+import (
+    "entgo.io/ent"
+    "entgo.io/ent/schema/field"
+)
+
+type User struct {
+    ent.Schema
+}
+
+func (User) Fields() []ent.Field {
+    return []ent.Field{
+        field.String("username").Unique(),
+        field.String("password"),
+        field.String("role"),
+    }
+}
